--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,14 +46,15 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="열어 보기"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"
         android:layout_marginLeft="147dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="열어 보기"
+        app:backgroundTint="#5D7BE8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
