--- a/app/src/main/res/layout/activity_sub2.xml
+++ b/app/src/main/res/layout/activity_sub2.xml
@@ -1,35 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp"
     android:gravity="center_horizontal"
     android:paddingTop="0dp"
     tools:context=".SubActivity2">
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/img1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00FDFDFD"
+        android:layout_marginLeft="-4dp"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/lbm"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/dot3"
+        android:layout_width="9dp"
+        android:layout_height="0dp"
+        android:layout_marginRight="16dp"
+        android:background="#00FDFDFD"
+        android:padding="15dp"
+        android:src="@drawable/dot3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <DatePicker
         android:id="@+id/date1"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:scaleX="1.2"
-        android:scaleY="1.20"
-        android:layout_marginLeft="-50dp"
-        android:layout_marginTop="-20dp"
-        android:layout_marginRight="-50dp"
-        android:layout_marginBottom="-30dp"
         android:layout_gravity="center_horizontal|top"
+        android:layout_marginTop="4dp"
         android:calendarViewShown="false"
         android:datePickerMode="spinner"
-        android:startYear="2021" />
+        android:scaleX="1.2"
+        android:scaleY="1.20"
+        android:startYear="2021"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <GridView
         android:id="@+id/grid_letter"
-        android:layout_marginTop="35dp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:numColumns="3"
         android:scrollbars="horizontal"
-        android:layout_height="match_parent"
-        android:numColumns="3"/>
+        android:layout_marginLeft="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/date1" />
 
-</LinearLayout>
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/img_write"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00FDFDFD"
+        android:layout_gravity="bottom|right"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
+        android:padding="10dp"
+        android:src="@drawable/write"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
