--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_width="120dp"
         android:layout_height="130dp"
         android:layout_marginLeft="150dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:src="@drawable/let" />
 
     <TextView
@@ -28,16 +28,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:padding="2dp"
         android:textStyle="bold"
         android:text="편지가 도착했습니다!"
         android:textColor="#000000"
         android:textSize="18dp" />
 
     <TextView
-        android:layout_width="246dp"
+        android:layout_width="320dp"
         android:layout_height="89dp"
         android:layout_gravity="center"
-        android:layout_margin="8dp"
+        android:gravity="center_horizontal"
+        android:padding="9dp"
+        android:layout_margin="5dp"
         android:text="@string/text"
         android:textColor="#000000"
         android:textSize="40px" />
@@ -47,8 +50,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="147dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         android:text="열어 보기"
         app:backgroundTint="#5D7BE8"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,6 +59,45 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="0.7dp"
+        android:background="#B5199F" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:padding="7dp"
+        android:layout_margin="10dp"
+        android:text="오늘의 편지쓰기"
+        android:textColor="#000000"
+        android:textSize="17dp" />
+    <TextView
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="6dp"
+        android:text="@string/text2"
+        android:textColor="#000000"
+        android:textSize="40px" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
+        android:layout_marginLeft="147dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:text="열어 보기"
+        app:backgroundTint="#E85E5E"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </LinearLayout>
