--- a/app/src/main/res/menu/sub2_menu.xml
+++ b/app/src/main/res/menu/sub2_menu.xml
@@ -2,5 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/item_setting"
-        android:title="설정"/>
+        android:title="@string/item1" />
+    <item
+        android:id="@+id/item_del"
+        android:title="@string/item2" />
+    <item
+        android:id="@+id/item_sort"
+        android:title="@string/item3">
+        <item
+            android:id="@+id/item_sort1"
+            android:title="@string/item3_1" />
+        <item
+            android:id="@+id/item_sort2"
+            android:title="@string/item3_2" />
+    </item>
 </menu>
