Edit activity_main.xml (icon and layout 배치)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,17 +17,18 @@
 
     <ImageView
         android:id="@+id/img2"
-        android:layout_width="120dp"
-        android:layout_height="130dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="5dp"
-        android:src="@drawable/let" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-30dp"
+        android:layout_marginBottom="17dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/main_letter" />
 
     <TextView
         android:layout_alignRight="@id/img2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:padding="2dp"
         android:textStyle="bold"
         android:text="편지가 도착했습니다!"
@@ -35,15 +36,14 @@
         android:textSize="18dp" />
 
     <TextView
-        android:layout_width="320dp"
+        android:layout_width="291dp"
         android:layout_height="89dp"
         android:layout_gravity="center"
-        android:gravity="center_horizontal"
-        android:padding="9dp"
-        android:layout_margin="5dp"
+        android:gravity="left"
+        android:layout_marginTop="7dp"
         android:text="@string/text"
         android:textColor="#000000"
-        android:textSize="40px" />
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/button"
@@ -61,14 +61,17 @@
 
 
     <View
-        android:layout_width="wrap_content"
+        android:layout_width="284dp"
         android:layout_height="0.7dp"
-        android:background="#B5199F" />
+        android:layout_gravity="center"
+        android:layout_marginTop="45dp"
+        android:layout_marginBottom="29dp"
+        android:background="#605A5A" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:textStyle="bold"
         android:padding="7dp"
         android:layout_margin="10dp"
@@ -76,10 +79,10 @@
         android:textColor="#000000"
         android:textSize="17dp" />
     <TextView
-        android:layout_width="290dp"
+        android:layout_width="291dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="6dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="6dp"
         android:text="@string/text2"
         android:textColor="#000000"
         android:textSize="40px" />
@@ -87,17 +90,13 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        android:layout_marginLeft="147dp"
+        android:layout_gravity="center_horizontal"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
+        android:layout_marginTop="20dp"
         android:text="열어 보기"
         app:backgroundTint="#E85E5E"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center" />
 
 
 </LinearLayout>
