Edit SubActivity2 longclick 시 편지 삭제 처리

--- a/app/src/main/res/layout/activity_sub2.xml
+++ b/app/src/main/res/layout/activity_sub2.xml
@@ -52,7 +52,9 @@
         android:layout_height="0dp"
         android:numColumns="3"
         android:scrollbars="horizontal"
-        android:layout_marginLeft="25dp"
+        android:gravity="center_horizontal"
+        android:verticalSpacing="13dp"
+        android:horizontalSpacing="-3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
