--- a/app/src/main/res/layout/sub2_grid_items.xml
+++ b/app/src/main/res/layout/sub2_grid_items.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp"
-    android:layout_height="match_parent">
+    android:padding="7dp"
+    android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/sub2_letter_img"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:paddingLeft="3dp"
         android:src="@drawable/ic_baseline_mail_outline_24"/>
+
     <TextView
         android:id="@+id/sub2_letter_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:layout_marginTop="-7dp"
-        android:text="2021.07.28"/>
+        android:text="2021.07.28" />
 
 </LinearLayout>
