--- a/app/src/main/res/menu/sub2_menu.xml
+++ b/app/src/main/res/menu/sub2_menu.xml
@@ -9,11 +9,13 @@
     <item
         android:id="@+id/item_sort"
         android:title="@string/item3">
-        <item
-            android:id="@+id/item_sort1"
-            android:title="@string/item3_1" />
-        <item
-            android:id="@+id/item_sort2"
-            android:title="@string/item3_2" />
+        <menu>
+            <item
+                android:id="@+id/item_sort1"
+                android:title="@string/item3_1" />
+            <item
+                android:id="@+id/item_sort2"
+                android:title="@string/item3_2" />
+        </menu>
     </item>
 </menu>
