--- a/app/src/main/res/layout/activity_openletter.xml
+++ b/app/src/main/res/layout/activity_openletter.xml
@@ -11,6 +11,17 @@
         android:src="@drawable/home"
         android:padding="10dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:padding="2dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="40dp"
+        android:text="편지가 도착했습니다 !"
+        android:textSize="23dp"
+        android:textColor="#000000"/>
+
 
 
 </LinearLayout>
