--- a/app/src/main/res/layout/activity_openletter.xml
+++ b/app/src/main/res/layout/activity_openletter.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
     <ImageView
@@ -14,13 +15,48 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:padding="2dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_gravity="center"
         android:text="편지가 도착했습니다 !"
         android:textSize="23dp"
         android:textColor="#000000"/>
+    <FrameLayout
+        android:id="@+id/FrameLayout01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="430dp"
+            android:layout_gravity="center"
+            android:background="#346FAE"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:paddingLeft="300dp"
+            android:paddingTop="400dp"
+            android:src="@drawable/reply" />
+    </FrameLayout>
+
+    <Button
+        android:id="@+id/letter"
+        android:layout_width="148dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="157dp"
+        android:layout_marginRight="150dp"
+        android:layout_margin="40dp"
+        android:gravity="center"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:text="편지 보내기"
+        app:backgroundTint="#2463E1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
