--- a/app/src/main/res/layout/activity_writeletter.xml
+++ b/app/src/main/res/layout/activity_writeletter.xml
@@ -24,15 +24,22 @@
         android:textColor="#000000"
         android:textSize="23dp" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="300dp"
-        android:layout_height="400dp"
+    <ImageView
+        android:id="@+id/img3"
+        android:layout_width="500dp"
+        android:layout_height="450dp"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:text="내용을 입력해 주세요"/>
+        android:src="@drawable/red"/>
 
+<!--    <Button-->
+<!--        android:id="@+id/button3"-->
+<!--        android:layout_width="300dp"-->
+<!--        android:layout_height="400dp"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:layout_marginRight="20dp"-->
+<!--        android:text="내용을 입력해 주세요"/>-->
 
     <TextView
         android:id="@+id/text"
