--- a/app/src/main/res/layout/activity_openletter.xml
+++ b/app/src/main/res/layout/activity_openletter.xml
@@ -25,11 +25,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
-        <TextView
+        <ImageView
             android:layout_width="300dp"
             android:layout_height="430dp"
             android:layout_gravity="center"
-            android:background="#346FAE"/>
+           android:src="@drawable/blue" />
+
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="430dp"
+            android:layout_gravity="center"/>
 
         <ImageView
             android:layout_width="wrap_content"
