--- a/app/src/main/res/layout/activity_writeletter.xml
+++ b/app/src/main/res/layout/activity_writeletter.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/img1"
+        android:id="@+id/write_home_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/home"
