--- a/app/src/main/res/layout/setup_mail.xml
+++ b/app/src/main/res/layout/setup_mail.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/img1"
@@ -53,10 +53,21 @@
 
     <RadioGroup
         android:layout_width="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@+id/linear_email2"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_height="wrap_content">
+        app:layout_constraintTop_toTopOf="@+id/guideline2">
+
+        <RadioButton
+            android:id="@+id/mail_send1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/mail_send2"
+            android:layout_marginTop="150dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </RadioGroup>
 
@@ -77,6 +88,24 @@
             android:text="@string/random_mail_set"
             android:textColor="#000000"
             android:textSize="28dp" />
+
+        <TextView
+            android:id="@+id/alarm_text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/send_mail_day"
+            android:textSize="24dp" />
+
+        <TextView
+            android:id="@+id/alarm_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/send_mail_interval"
+            android:textSize="24dp" />
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
@@ -84,11 +113,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2"/>
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:layout_constraintGuide_percent="0.2" />
 
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
