--- a/app/src/main/res/layout/activity_openletter.xml
+++ b/app/src/main/res/layout/activity_openletter.xml
@@ -31,17 +31,11 @@ android:layout_gravity="center">
     android:src="@drawable/blue" />
 
 <TextView
+    android:id="@+id/open_textView"
     android:layout_width="300dp"
     android:layout_height="430dp"
     android:layout_gravity="center"/>
 
-<ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="30dp"
-    android:paddingLeft="300dp"
-    android:paddingTop="400dp"
-    android:src="@drawable/reply" />
 </FrameLayout>
 
 <Button
