읽고 쓰기 디비완성 및 컬러리스트 생성

--- a/app/src/main/res/layout/activity_openletter.xml
+++ b/app/src/main/res/layout/activity_openletter.xml
@@ -28,7 +28,7 @@ android:layout_gravity="center">
     android:layout_width="300dp"
     android:layout_height="430dp"
     android:layout_gravity="center"
-    android:src="@drawable/blue" />
+    android:src="@drawable/color_blue" />
 
 <TextView
     android:id="@+id/open_textView"
