--- a/app/src/main/res/layout/activity_writeletter.xml
+++ b/app/src/main/res/layout/activity_writeletter.xml
@@ -35,7 +35,7 @@
             android:layout_width="500dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@drawable/red"/>
+            android:src="@drawable/color_red"/>
 
         <EditText
             android:id="@+id/Edit1"
