더 나은 코드

--- a/app/src/main/res/layout/activity_writeletter.xml
+++ b/app/src/main/res/layout/activity_writeletter.xml
@@ -86,8 +86,8 @@
             android:layout_height="30dp"
             android:layout_margin="5dp"
             android:background="@drawable/resource_file"
-            android:backgroundTint="#FF9800"
-            app:backgroundTint="#FF9800" />
+            android:backgroundTint="#FFFB00"
+            app:backgroundTint="#FFFB00" />
 
         <Button
             android:id="@+id/green"
