버튼 에러 수정 완료

--- a/app/src/main/res/layout/activity_writeletter.xml
+++ b/app/src/main/res/layout/activity_writeletter.xml
@@ -87,7 +87,8 @@
             android:layout_margin="5dp"
             android:background="@drawable/resource_file"
             android:backgroundTint="#FFFB00"
-            app:backgroundTint="#FFFB00" />
+            app:backgroundTint="#FFFB00"
+            />
 
         <Button
             android:id="@+id/green"
