편지 값 받아오기

--- a/app/src/main/res/layout/activity_openletter.xml
+++ b/app/src/main/res/layout/activity_openletter.xml
@@ -25,6 +25,7 @@ android:layout_height="wrap_content"
 android:layout_gravity="center">
 
 <ImageView
+    android:id="@+id/imgR"
     android:layout_width="300dp"
     android:layout_height="430dp"
     android:layout_gravity="center"
