--- a/app/src/main/res/menu/sub2_menu.xml
+++ b/app/src/main/res/menu/sub2_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/item_setting"
+        android:id="@+id/item_button1"
         android:title="@string/item1" />
     <item
         android:id="@+id/item_del"
